--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.2.1",
     "axios": "^0.21.1",
+    "csv-parser": "^3.0.0",
     "framer-motion": "^3.10.2",
     "next": "10.0.7",
     "react": "17.0.1",
