--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^8.2.0",
     "framer-motion": "^3.10.2",
+    "gsap": "^3.6.1",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
