--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gsap": "^3.6.1",
     "next": "10.0.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sharp": "^0.26.3"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^3.1.3",
